--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
   "backgroundPath":"/images/bg.jpg",
   "minecraftDirPathName":"kavasaki",
-  "appIconFile":"/images/icon.ico"
+  "appIconFile":"images/icon.ico"
 }
