--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,9 @@
 {
-  "backgroundPath":"/data/images/bg.jpg",
+  "backgroundPath":"\\data\\images\\bg.jpg",
   "minecraftDirPathName":"kavasaki",
   "appIconFile":"data/images/icon.ico",
   "dataPath":"data",
   "rpFileName":"SUHOGRUZx.zip",
-  "nopFileName":"newMineOptions.txt"
+  "nopFileName":"newMineOptions.txt",
+  "curentPath":"C:\\Program Files\\kavasaki"
 }
